# vcard-generator

./: README.md  Spacefile  main.py  pyproject.toml  requirements.txt  utils.py
templates/: index.html
templates/partials/: download.html
