[tool.poetry]
name = "vcard-generator"
version = "0.1.0"
description = ""
authors = ["Ademola Balogun <ademolabalogun91@gmail.com>"]
readme = "README.md"
packages = [{include = "vcard_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flask-wtf = "^1.2.1"
vcf-creator = "^1.1.1"
xlsx-csv = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
