[tool.poetry]
name = "vcard-generator"
version = "0.1.0"
description = ""
authors = ["Ademola Balogun <ademolabalogun91@gmail.com>"]
readme = "README.md"
packages = [{include = "vcard_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
vcf-creator = "^1.1.1"
pandas = "2.1.0"
openpyxl = "^3.1.2"
flask-htmx = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
